@@ -191,6 +191,7 @@ Trunk (unreleased changes)
 
   BUG FIXES
   
+    HAMA-344: Task successfully finished but system re-attempt (edwardyoon)
     HAMA-343: Fix Maven test fails (Tommaso Teofili via edwardyoon)
     HAMA-338: Username and Job-manager states are not collectly displayed (edwardyoon)
     HAMA-330: BSP program doesn't work when the desired tasks smaller than 
